--- a/hw/page1-ex-link.html
+++ b/hw/page1-ex-link.html
@@ -11,22 +11,21 @@
 <body>
     <div data-role="page" id="page1">
         <div data-role="header">
-            <h1>인터넷활용 과제</h1>
+            <h1>artificial intelligence developer</h1> <!--1.자기소개-->
         </div>
         <div data-role="content">
-            <h1>artificial intelligence developer</h1>
-            <img src="image/image.jpg" alt="증명사진" width="100" height="100">
-            <p style="font-family: Arial; font-size: 20px; color: #333;">
+            <img src="image/image.jpg" alt="증명사진" width="100" height="100"> <!--2.증명사진-->
+            <p style="font-family: Arial; font-size: 20px; color: #333;"> <!--3. 학과 이름 학번-->
                 <br>학과: 로봇학부
                 <br>이름: 김근형
                 <br>학번: 2024405074
             </p>
             <ul data-role="listview" data-inset="true">
                 <li>
-                    <a href="mailto:leokim0503@naver.com">이메일 링크</a>
+                    <a href="mailto:leokim0503@naver.com">이메일 링크</a> <!--4. 이메일-->
                 </li>
-                <pre>
-                    현재 광운대학교 로빛이라는 자치기구에 속해있다. 
+                <pre> <!--5. 간단한 소개-->
+                    현재 로빛이라는 광운대학교 자치기구에 속해있다. 
                     기수: 19기
                     팀: 휴머노이드 팀
                     근무 시간: 오후 7시~오후 11시
